overflow fix

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -116,7 +116,7 @@ a {
   }
 
   .landingPageContainer > div{
-    width: 95%;
+    width: 90%;
     margin: auto;
   }
 
